src/styles/styles.css
/* Imports */
@import './_fonts.css';
@import './_colors.css';

:root {
    font-family: sans-serif, system-ui, -apple-system;
}

html {
    scroll-behavior: smooth;
}

html, body {
    height: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Josefin Sans", sans-serif, system-ui, Arial;
    font-weight: bolder;
    text-align: center;
}

.underline {
    text-decoration: underline;
    text-decoration-color: var(--text-highlight-color);
    text-decoration-thickness: .10em;
    transition: 120ms ease-in;
    
}

.underline:hover {
    text-decoration-thickness: .15em;
}

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 1.8em;
}

h3 {
    font-size: 1.4em;
}

.no-list-style {
    list-style: none;
}

.img-center {
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.row {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    flex-wrap: wrap;
}

.row > li {
    text-align: center;
    margin: 6px;
}


.highlight {
    color: var(--text-highlight-color);
    font-weight: bold;
}

.highlight-darker {
    color: var(--text-highlight-darker);
    font-weight: bold;
}

a {
    color: var(--link-color);
    transition: 300ms ease-in;
}

a:hover {
    color: var(--pti-dark);
}

.center {
    width: 100%;
    display: block;
    position: flex;
    top: 50%;
    transform: translate(0, -50%);
}

